--- a/final-project.rmd
+++ b/final-project.rmd
@@ -1,6 +1,11 @@
-2016 Presidential Campaign Contributions in Michigan 
-by Liz Kalina
+# 2016 Presidential Campaign Contributions in Michigan 
+
+### by Liz Kalina
 ========================================================
+
+## Preparations
+
+#### Load Packages
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, packages}
 library(ggplot2)
@@ -13,6 +18,8 @@ library(ade4)
 library(data.table)
 library(choroplethrZip)
 ```
+
+#### Load Datasets
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Load_the_Data}
 # Load the Contribution Data and Column Names for Michigan
@@ -42,22 +49,21 @@ This report explores a dataset containing campaign contributions to all
 candidates in the 2016 presidential election by Michigan residents. As a former 
 Michigander, I'm particularly interested in Michigan's current political climate.
 
-# Univariate Plots Section
+## Univariate Plots Section
 
-## Dataset Characteristics
+#### Dataset Characteristics
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 str(contrib)
 ```
-
-Our dataset consists of 18 variables, with 163,765 observations.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 length(unique(contrib$cand_nm))
 ```
 
-There are 24 candidates that people contributed to.
+Our dataset consists of 18 variables, with 163,765 observations and 24 
+candidates that people contributed to.
 
-### Summary of Contributions to Each Candidates
+#### Summary of Contributions to Each Candidates
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 #by(contrib$contb_receipt_amt, contrib$cand_nm, summary)
 
@@ -72,11 +78,11 @@ ordered_cands
 ```
 
 The top Democratic candidates (Hillary Clinton, Bernie Sanders) received the 
-largest number of donations, while the two three Republican candidates (Donald 
-Trump, Ted Cruz, Ben Carson) received fewer with median donations roughly double
-that of the Democrats.
+largest number of donations, while the top three Republican candidates (Donald 
+Trump, Ted Cruz, Ben Carson) received overall fewer donations but their median 
+donations were roughly double that of the Democrats.
 
-### Summary of Contributions by City
+#### Summary of Contributions by City
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 city <- group_by(contrib, contbr_city)
 city_summary <- summarize(city, total = length(contb_receipt_amt),
@@ -87,12 +93,11 @@ city_summary <- summarize(city, total = length(contb_receipt_amt),
 city_summary[order(city_summary$total, decreasing=TRUE) , ]
 ```
 The five cities with the largest number of donations were Ann Arbor, Grand 
-Rapids, Detroit, Kalamazoo and Lansing. A few of the cities with the highest
-median donations were Bloomfield Hills and Grosse Pointe with medians of $80.
+Rapids, Detroit, Kalamazoo and Lansing.
 
-## Contribution Histograms
+### Contribution Histograms
 
-### Overall Distribution
+#### Overall Distribution
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 ggplot(aes(x = contb_receipt_amt), data = contrib) + 
   geom_histogram(binwidth=5) +
@@ -102,7 +107,7 @@ A vast majority of donations were less than $500 which shows that at least in
 the context of individual donations, it's not just rich donors making a majority
 of the contributions.
 
-### Contributions less than $100
+#### Contributions less than $100
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 ggplot(aes(x = contb_receipt_amt), data = subset(contrib,contb_receipt_amt < 100)) + 
   geom_histogram(binwidth=10) +
@@ -111,14 +116,14 @@ ggplot(aes(x = contb_receipt_amt), data = subset(contrib,contb_receipt_amt < 100
 For donations less than $100, you can notice peaks around $25, $50 and $75
 which makes sense since suggested donation amounts are often in $25 increments.
 
-### Contributions less than $400
+#### Contributions less than $400
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 ggplot(aes(x = contb_receipt_amt), data = subset(contrib,contb_receipt_amt < 400)) + 
   geom_histogram(binwidth=50) +
   scale_x_continuous(limits = c(0, 400))
 ```
 
-### Contributions greater than $1000
+#### Contributions greater than $1000
 ```{r echo=FALSE,message=FALSE, warning=FALSE,  Univariate_Plots}
 ggplot(aes(x = contb_receipt_amt), data = subset(contrib,contb_receipt_amt > 1000)) + 
   geom_histogram(binwidth=750) +
@@ -132,7 +137,7 @@ According to the Federal Election Commission:
 Since presidential campaigns have primaries and general elections, you can see 
 this reflected in the clustering of contribution amount at $2,700 and $5,400. 
 
-## Candidates with most and least donations
+### Candidates with most and least donations
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 p1 <- ggplot(aes(y=total, x= cand_nm),data=head(ordered_cands, 5)) + 
         geom_bar(stat="identity") + 
@@ -153,7 +158,7 @@ have more than half a million contributions while there are candidates on the
 ballet who receive less than 10 inidvidual donations.
 
 
-## Contributor Occupations and Employers
+### Contributor Occupations and Employers
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 contrib %>% 
@@ -174,15 +179,15 @@ Employment Observations
 + There are a large number of contributions without employer and occupation info
 
 
-## Contribution Timing
+### Contribution Timing
 
-### Add Date to Contributions
+#### Add Date to Contributions
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Formatting}
 contrib$contrib_date <- as.Date(contrib$contb_receipt_dt, '%d-%b-%y')
 contrib$contrib_month_year <- format(contrib$contrib_date, '%Y-%m')
 ```
 
-### Contributions Totals by Date
+#### Contributions Totals by Date
 ```{r echo=FALSE, message=FALSE, warning=FALSE,  Univariate_Plots}
 
 contrib_by_month_year <- contrib %>% 
@@ -199,7 +204,7 @@ July and October each coinciding with an election event; the Michigan Primary
 was March 8th, the Democratic and Republican national conventions occurred at the
 end of July and the General Election was November 8th.
 
-# Univariate Analysis
+## Univariate Analysis
 
 ### What is the structure of your dataset?
 
@@ -215,24 +220,24 @@ Did you perform any operations on the data to tidy, adjust, or change the form \
 of the data? If so, why did you do this?
 
 
-# Bivariate Plots Section
+## Bivariate Plots Section
 
-## Determine Contributor Gender and Candidate Political Party Affiliation
+### Determine Contributor Gender and Candidate Political Party Affiliation
 
-### Add Political Party Affiliation
+#### Add Political Party Affiliation
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Univariate_Plots}
 contrib <- merge(contrib, subset(cand_info[c("cand_id", "cand_pty_aff")]), by = "cand_id")
 ```
 This information comes from the Federal Election Commission website.
 
-### Split Full Name column into First and Last Names
+#### Split Full Name column into First and Last Names
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Formatting}
 contrib <- separate(contrib, contbr_nm, c("last_name", "first_name"), sep = ",", extra="merge", fill="right")
 contrib <- data.frame(lapply(contrib, trimws))
 contrib$clean_first_name <- gsub("([A-Za-z]+).*", "\\1", contrib$first_name)
 ```
 
-### Add Gender to Contributors
+#### Add Gender to Contributors
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Bivariate_Plots}
 gender_lookup <- gender(c(unique(contrib$clean_first_name)))
 contrib <- left_join(contrib,gender_lookup,by = c("clean_first_name"="name"))
@@ -246,9 +251,9 @@ In order to determine each contributors gender, I used the 'gender' package in R
 which encodes gender based on names and dates of birth using historical datasets.
 I decided to use a threshold of 75% certainty to assign a gender to a name.
 
-## Contributor Political Party Investigation
+### Contributor Political Party Investigation
 
-### Contributor Gender vs. Political Party
+#### Contributor Gender vs. Political Party
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Bivariate_Plots}
 ggplot(aes(x=cand_pty_aff),
        data=subset(contrib,!is.na(gender) & cand_pty_aff %in% c('Republican Party','Democratic Party'))) +
@@ -258,7 +263,7 @@ ggplot(aes(x=cand_pty_aff),
 Both men and women in Michigan donate more to Democrats than Republicans,
 however women are significantly more likely to donate Democratic than men.
 
-### Contributions Totals by Date and Political Party
+#### Contributions Totals by Date and Political Party
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Bivariate_Plots}
 
 contrib_by_date_w_party <- contrib %>% 
@@ -273,7 +278,7 @@ While Republicans actually donated more prior to 2016, the Democratic candidates
 received the overall majority of contributions. There were very few donations
 that were Libertarian or not marked for the a candidate.
 
-### Republican Candidate Contribution Totals by Date
+#### Republican Candidate Contribution Totals by Date
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Bivariate_Plots}
 
 reps <- subset(contrib, cand_pty_aff == 'Republican Party') %>% 
@@ -291,7 +296,7 @@ peaked at the Republican National convention at the end of July and then
 steadily declined until the month before the general election when it had another
 small resurgence.
 
-# Bivariate Analysis
+## Bivariate Analysis
 
 > **Tip**: As before, summarize what you found in your bivariate explorations
 here. Use the questions below to guide your discussion.
@@ -306,9 +311,9 @@ the dataset?
 ### What was the strongest relationship you found?
 
 
-# Multivariate Plots Section
+## Multivariate Plots Section
 
-### Hillary vs. Trump over Time
+#### Hillary vs. Trump over Time
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Bivariate_Plots}
 
 hill_v_trump <- subset(contrib, cand_nm %in% c('Clinton, Hillary Rodham','Trump, Donald J.') & !is.na(gender)) %>% 
@@ -327,9 +332,9 @@ Hillary than Trump, while men donated more to Trump in months leading up to the
 election.
 
 
-## Contribution Amount Distribution
+### Contribution Amount Distribution
 
-### Top 10 Candidates
+#### Top 10 Candidates
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Multivariate_Plots}
 top_10 <- head(ordered_cands, 10)$cand_nm
 
@@ -343,7 +348,7 @@ Observations
 + Hillary has a low interquartile range but still have many large contributions 
 + Jeb Bush have comically large contributions 
 
-### By Political Party and Gender
+#### By Political Party and Gender
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Bivariate_Plots}
 contrib$contb_receipt_amt <- as.numeric(as.character(contrib$contb_receipt_amt))
 
@@ -355,7 +360,7 @@ From this boxplot, you can see that the interquartile range for contribution amo
 is less than $100 across gender/political party and Republican men give the most
 per contribution.
 
-## Determine Population Density and Unemployment Rate of Contributor Zipcodes
+### Determine Population Density and Unemployment Rate of Contributor Zipcodes
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Multivariate_Plots}
 contrib$contbr_zip <- as.integer(substr(contrib$contbr_zip, 0, 5))
@@ -389,7 +394,7 @@ These cutoffs are based on an analysis presented on the FiveThirtyEight blog:
 > Our analysis showed that the single best predictor of whether someone said his or her area was urban, suburban or rural was ZIP code density. Residents of ZIP codes with more than 2,213 households per square mile typically described their area as urban. Residents of neighborhoods with 102 to 2,213 households per square mile typically called their area suburban. In ZIP codes with fewer than 102 households per square mile, residents typically said they lived in a rural area.
 
 
-### Party Affiliation vs. Unemployment vs. Population Density
+#### Party Affiliation vs. Unemployment vs. Population Density
 ```{r echo=FALSE,message=FALSE, warning=FALSE,Multivariate_Plots}
 ggplot(aes(y=`Unemp. Rate`,x=`Density Per Sq Mile`), data=contrib) +
     geom_point(aes(color=cand_pty_aff),alpha = 1/100, size=3) +
@@ -407,7 +412,7 @@ average unemployment and lower to moderate population density. What I would
 takeaway from this is that Democratic contributors tend to live in urban areas
 while Republican contributors inhabit more rural and suburban areas.
 
-### Correlation: Population Density, Gender, Party Affiliation
+#### Correlation: Population Density, Gender, Party Affiliation
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Multivariate_Plots}
 
 feats = c('gender','cand_pty_aff')
@@ -430,7 +435,7 @@ Observations
   + Republicans: lower population density, male
 
 
-## Group by Party and Zipcode
+### Group by Party and Zipcode
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Multivariate_Plots}
 
 ## by zipcode
@@ -462,7 +467,7 @@ For the politcal party calculations, I select the dominant party (based on numbe
 of contributions) for each zipcode and calculate the percentage of total 
 contributions that party receives.
 
-### Median Donation by Zipcode
+#### Median Donation by Zipcode
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Multivariate_Plots}
 
 don_amt <- subset(group_by_zip,total > 10 & !is.na(region), c('region','value'))
@@ -478,7 +483,7 @@ The geography of median donation seems to be relatively evenly distributed acros
 the state with the exeception of Metro Detroit which is almost uniformly less 
 than $30. The black regions are zipcodes with less than 10 donations.
 
-## Correlation: Median Donation, Total Donations, Party Leaning
+#### Correlation: Median Donation, Total Donations, Party Leaning
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, Multivariate_Plots}
 
@@ -494,7 +499,7 @@ The above scatterplot matrix shows each zipcode as a point. This plot simply
 reinforces that Democrats live in more densely populated areas than Republicans
 since the Democratic zipcode have more total donations than the Republican zips.
 
-# Multivariate Analysis
+## Multivariate Analysis
 
 ### Talk about some of the relationships you observed in this part of the \
 investigation. Were there features that strengthened each other in terms of \
@@ -504,7 +509,7 @@ looking at your feature(s) of interest?
 
 ------
 
-# Final Plots and Summary
+## Final Plots and Summary
 
 > **Tip**: You've done a lot of exploration and have built up an understanding
 of the structure of and relationships between the variables in your dataset.
